fix(css): resolve layout issue in style.css

--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,7 @@ body {
   z-index: 100;
   background: #051129;
   background-color: aliceblue;
+  /* background-color: rgb(103, 103, 104); */
 
   /* background-color: var(--secondary-color); */
   color: var(--primary-color);
@@ -32,6 +33,7 @@ body {
 #icon {
   width: 30px;
   cursor: pointer;
+  /* color: #000; */
 }
 
 :root {
@@ -41,7 +43,7 @@ body {
 }
 
 .dark-theme {
-  --primary-color: #ffffff; /* White text for dark mode */
+  --primary-color: white; /* White text for dark mode */
   --secondary-color: #000000; /* Black background for dark mode */
 }
 
@@ -818,3 +820,9 @@ footer p {
     padding: 2rem 50px;
   }
 }
+
+/* .black-theme {
+  background-color: black !important;
+  color: black !important;
+} */
+
